cpp/inspireface/c_api/inspireface.h


typedef struct HFSessionCustomParameter {
    HInt32 enable_recognition;           
    HInt32 enable_liveness;              
    HInt32 enable_ir_liveness;           
    HInt32 enable_mask_detect;           
    HInt32 enable_face_quality;          
    HInt32 enable_face_attribute;        
    HInt32 enable_interaction_liveness;  
    HInt32 enable_detect_mode_landmark;  
    HInt32 enable_face_pose;             
    HInt32 enable_face_emotion;          
} HFSessionCustomParameter, *PHFSessionCustomParameter;
typedef struct HFFaceBasicToken {
    HInt32 size;  
    HPVoid data;  
} HFFaceBasicToken, *PHFFaceBasicToken;
typedef struct HFFaceEulerAngle {
    HPFloat roll;   
    HPFloat yaw;    
    HPFloat pitch;  
} HFFaceEulerAngle;
typedef struct HFMultipleFaceData {
    HInt32 detectedNum;        
    PHFaceRect rects;          
    HPInt32 trackIds;          
    HPInt32 trackCounts;       
    HPFloat detConfidence;     
    HFFaceEulerAngle angles;   
    PHFFaceBasicToken tokens;  
} HFMultipleFaceData, *PHFMultipleFaceData;
typedef struct HFFaceFeature {
    HInt32 size;   
    HPFloat data;  
} HFFaceFeature, *PHFFaceFeature;
typedef struct HFFaceFeatureIdentity {
    HFaceId id;              
    PHFFaceFeature feature;  
} HFFaceFeatureIdentity, *PHFFaceFeatureIdentity;
typedef struct HFFeatureHubSearchResultV2 {
    HInt32 found;
    HFaceId id;
    HFloat confidence;
    HFFaceFeature feature;
} HFFeatureHubSearchResultV2, *PHFFeatureHubSearchResultV2;
typedef struct HFSearchTopKResults {
    HInt32 size;         
    HPFloat confidence;  
    HPFaceId ids;        
} HFSearchTopKResults, *PHFSearchTopKResults;
typedef struct HFSimilarityConverterConfig {
    HFloat threshold;    
    HFloat middleScore;  
    HFloat steepness;    
    HFloat outputMin;    
    HFloat outputMax;    
} HFSimilarityConverterConfig, *PHFSimilarityConverterConfig;
HYPER_CAPI_EXPORT extern HResult HFUpdateCosineSimilarityConverter(HFSimilarityConverterConfig config);
HYPER_CAPI_EXPORT extern HResult HFGetCosineSimilarityConverter(PHFSimilarityConverterConfig config);
HYPER_CAPI_EXPORT extern HResult HFGetFeatureLength(HPInt32 num);
HYPER_CAPI_EXPORT extern HResult HFFeatureHubInsertFeature(HFFaceFeatureIdentity featureIdentity, HPFaceId allocId);
HYPER_CAPI_EXPORT extern HResult HFFeatureHubFaceSearch(HFFaceFeature searchFeature, HPFloat confidence, PHFFaceFeatureIdentity mostSimilar);
HYPER_CAPI_EXPORT extern HResult HFFeatureHubFaceSearchV2(HFFaceFeature searchFeature, PHFFeatureHubSearchResultV2 result);
HYPER_CAPI_EXPORT extern HResult HFFeatureHubFaceSearchTopK(HFFaceFeature searchFeature, HInt32 topK, PHFSearchTopKResults results);
HYPER_CAPI_EXPORT extern HResult HFFeatureHubFaceRemove(HFaceId id);
HYPER_CAPI_EXPORT extern HResult HFFeatureHubFaceUpdate(HFFaceFeatureIdentity featureIdentity);
HYPER_CAPI_EXPORT extern HResult HFFeatureHubGetFaceIdentity(HFaceId customId, PHFFaceFeatureIdentity identity);
HYPER_CAPI_EXPORT extern HResult HFFeatureHubGetFaceCount(HPInt32 count);
HYPER_CAPI_EXPORT extern HResult HFFeatureHubViewDBTable();
typedef struct HFFeatureHubExistingIds {
    HInt32 size;   
    HPFaceId ids;  
} HFFeatureHubExistingIds, *PHFFeatureHubExistingIds;
HYPER_CAPI_EXPORT extern HResult HFFeatureHubGetExistingIds(PHFFeatureHubExistingIds ids);
HYPER_CAPI_EXPORT extern HResult HFMultipleFacePipelineProcess(HFSession session, HFImageStream streamHandle, PHFMultipleFaceData faces,
                                                               HFSessionCustomParameter parameter);
HYPER_CAPI_EXPORT extern HResult HFMultipleFacePipelineProcessOptional(HFSession session, HFImageStream streamHandle, PHFMultipleFaceData faces,
                                                                       HInt32 customOption);
typedef struct HFRGBLivenessConfidence {
    HInt32 num;          
    HPFloat confidence;  
} HFRGBLivenessConfidence, *PHFRGBLivenessConfidence;
HYPER_CAPI_EXPORT extern HResult HFGetRGBLivenessConfidence(HFSession session, PHFRGBLivenessConfidence confidence);
typedef struct HFFaceMaskConfidence {
    HInt32 num;          
    HPFloat confidence;  
} HFFaceMaskConfidence, *PHFFaceMaskConfidence;
HYPER_CAPI_EXPORT extern HResult HFGetFaceMaskConfidence(HFSession session, PHFFaceMaskConfidence confidence);
typedef struct HFFaceQualityConfidence {
    HInt32 num;          
    HPFloat confidence;  
} HFFaceQualityConfidence, *PHFFaceQualityConfidence;
HYPER_CAPI_EXPORT extern HResult HFGetFaceQualityConfidence(HFSession session, PHFFaceQualityConfidence confidence);
HYPER_CAPI_EXPORT extern HResult HFFaceQualityDetect(HFSession session, HFFaceBasicToken singleFace, HPFloat confidence);
typedef struct HFFaceInteractionState {
    HInt32 num;                        
    HPFloat leftEyeStatusConfidence;   
    HPFloat rightEyeStatusConfidence;  
} HFFaceInteractionState, *PHFFaceInteractionState;
HYPER_CAPI_EXPORT extern HResult HFGetFaceInteractionStateResult(HFSession session, PHFFaceInteractionState result);
typedef struct HFFaceInteractionsActions {
    HInt32 num;         
    HPInt32 normal;     
    HPInt32 shake;      
    HPInt32 jawOpen;    
    HPInt32 headRaise;  
    HPInt32 blink;      
} HFFaceInteractionsActions, *PHFFaceInteractionsActions;
HYPER_CAPI_EXPORT extern HResult HFGetFaceInteractionActionsResult(HFSession session, PHFFaceInteractionsActions actions);
typedef struct HFFaceAttributeResult {
    HInt32 num;          
    HPInt32 race;        
    HPInt32 gender;      
    HPInt32 ageBracket;  
} HFFaceAttributeResult, *PHFFaceAttributeResult;