cpp/inspireface/c_api/intypedef.h


typedef void*               HFImageStream;                    
typedef void*               HFSession;                        
typedef float*              HPFloat;                          
typedef signed int			HInt32;                           
typedef signed int*			HPInt32;                          
typedef int64_t             HFaceId;                          
typedef int64_t*            HPFaceId;                         
typedef long                HResult;                          